Adding new js to layout

--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -7,6 +7,8 @@ html
     link(rel="stylesheet", href="/stylesheets/main.css")
     script(src="/javascripts/jquery.js")
     script(src="https://maps.googleapis.com/maps/api/js?key=#{api_key}&sensor=true")
+    script(src="/javascripts/utils.js")
+    script(src="/javascripts/server.js")
     script(src="/javascripts/maps.js")
   body
     != yield
