--- a/public/mobile/_layout.jade
+++ b/public/mobile/_layout.jade
@@ -8,6 +8,8 @@ html
 
     script(src="/javascripts/jquery.js")
     script(src="/javascripts/bootstrap.min.js")
+    script(src="/javascripts/utils.js")
+    script(src="/javascripts/server.js")
     script(src="/javascripts/broadcast.js")
   body
     != yield
