--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -33,3 +33,49 @@ body {
   list-style-type: none;
   color: #00CC00;
 }
+
+#sidebar{
+  z-index: 99999;
+  height: 100%;
+  width: 250px;
+  position: absolute;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.6);
+}
+#sidebar #toggle{
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  top: 30px;
+  left: -30px;
+}
+
+#sidebar #resources{
+  list-style-type: none;
+  padding-left: 5px;
+}
+
+#sidebar #resources li{
+  list-style-type: none;
+  padding: 5px;
+}
+
+#sidebar #resources li a{
+  display: block;
+}
+
+#sidebar #resources li a img{
+  margin-top: 2px;
+  margin-left: 2px;
+}
+
+#sidebar #resources li a div{
+  display: inline-block;
+  position: absolute;
+  top: 29px;
+  left: 50px;
+}
+
+#sidebar #resources li a:hover{
+  background-color: grey;
+}
