Corrigindo bugs, funcionalidade de follow e sidebar com media queries

--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -4,6 +4,7 @@ html
     title="Where is my Bus?!"
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
 
+    link(rel="stylesheet", href="/stylesheets/bootstrap.min.css")
     link(rel="stylesheet", href="/stylesheets/main.css")
     script(src="/javascripts/jquery.js")
     script(src="https://maps.googleapis.com/maps/api/js?key=#{api_key}&sensor=true")
