--- a/public/mobile/index.jade
+++ b/public/mobile/index.jade
@@ -11,6 +11,7 @@ nav.navbar.navbar-inverse
       select.type.form-control(placeholder="Type", required)
         option(value="bus") Bus
         option(value="plane") Plane
+        option(value="bicycle") Bicycle
     .form-group
       textarea.info.form-control(placeholder="Content", required)
     button#start-broadcasting.btn.btn-primary.btn-block Start Broadcasting
